fix: 仪表盘图表改用与统计页面完全相同的数据传递方式(script type=application/json + th:utext)